--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@
 
 # Set prefix to ^A.
 set -g prefix ^A
+set -g prefix2 ^B
 bind a send-prefix
 
 bind A command-prompt "rename-window %%"  # A = Rename window
@@ -41,12 +42,17 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 
-set -g  default-terminal                "xterm-256color" # "screen-256color"
+set -g  default-terminal                "screen-256color" # "screen-256color"
 set -g  default-command                 "reattach-to-user-namespace -l bash"
 set -g  mouse                           on
+set -s  escape-time                     0
+set -g  history-limit                   500000
+set -g  display-time                    4000
+set -g  focus-events                    on
 
 set -g  base-index                      1
 set -gw pane-base-index                 1
@@ -68,7 +74,7 @@ set -g  message-style                   fg=red,bold,bg=default
 set -gw mode-style                      fg=colour0,bg=colour6
 
 set -g  status-style                    fg=colour12,bg=colour234
-set -g  status-left                     ''
+set -g  status-left                     '[#S] '
 set -g  status-right                    '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g  status-interval                 2
 
