--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 set -g  default-terminal                "screen-256color" # "screen-256color"
-set -g  default-command                 "reattach-to-user-namespace -l bash"
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l bash"'
 set -g  mouse                           on
 set -s  escape-time                     0
 set -g  history-limit                   500000
