--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,7 @@ set -g  focus-events                    on
 set -g  base-index                      1
 set -gw pane-base-index                 1
 set -g  renumber-windows                on
+set -g  allow-rename                    off
 
 set -g  visual-activity                 on
 set -gw monitor-activity                on
@@ -80,5 +81,21 @@ set -g  status-interval                 2
 
 set -gw window-status-style             fg=colour138,bg=colour235
 set -gw window-status-format            ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-set -gw window-status-current-style     fg=colour81,bold,bg=colour238,bold
+set -gw window-status-current-style     fg=colour81,bold,bg=colour12,bold
 set -gw window-status-current-format    ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+bind -T copy-mode-vi M-Up              send-keys -X scroll-up
+bind -T copy-mode-vi M-Down            send-keys -X scroll-down
+bind -T copy-mode-vi M-PageUp          send-keys -X halfpage-up
+bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
+bind -T copy-mode-vi PageDown          send-keys -X page-down
+bind -T copy-mode-vi PageUp            send-keys -X page-up
+
+bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
+bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
+
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDown1Pane select-pane \;\
+  send-keys -X copy-pipe "pbcopy" \;\
+  send-keys -X clear-selection
