--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,10 +74,9 @@ set -g  pane-active-border-style        fg=colour51,bg=default
 set -g  message-style                   fg=red,bold,bg=default
 set -gw mode-style                      fg=colour0,bg=colour6
 
-set -g  status-style                    fg=colour12,bg=colour234
-set -g  status-left                     '[#S] '
-set -g  status-right                    '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g  status-interval                 2
+set -g  status-left                     '#[fg=colour12,bg=colour234][#S] #[fg=colour234,bg=colour12]'
+set -g  status-right                    '#[fg=colour241,bg=colour233]#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour245,bg=colour241]#[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g  status-interval                 1
 
 set -gw window-status-style             fg=colour138,bg=colour235
 set -gw window-status-format            ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
