--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,14 +2,6 @@
 # s       = sessions
 # w       = windows
 
-# Rename
-# $       = session
-# A or ,  = window
-
-# New 
-# c       = window
-# S or V  = pane
-
 # Previous / Next
 # ( or )  = session
 # p or n  = window
@@ -23,8 +15,6 @@
 # Kill
 # k       = window
 # x       = pane
-
-# Set prefix to ^A.
 set -g prefix ^A
 set -g prefix2 ^B
 bind a send-prefix
@@ -43,14 +33,26 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 bind P paste-buffer
+
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi M-Up              send-keys -X scroll-up
+bind -T copy-mode-vi M-Down            send-keys -X scroll-down
+bind -T copy-mode-vi M-PageUp          send-keys -X halfpage-up
+bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
+bind -T copy-mode-vi PageDown          send-keys -X page-down
+bind -T copy-mode-vi PageUp            send-keys -X page-up
+
+bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
+bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X copy-pipe "pbcopy" \; send-keys -X clear-selection
 
 set -g  default-terminal                "screen-256color" # "screen-256color"
 if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l bash"'
 set -g  mouse                           on
 set -s  escape-time                     0
-set -g  history-limit                   500000
+set -g  history-limit                   50000
 set -g  display-time                    4000
 set -g  focus-events                    on
 
@@ -68,33 +70,21 @@ set -gw mode-keys                       vi
 set -g  set-titles                      on
 set -g  set-titles-string               '#H:#S.#I.#P #W #T'
 
-set -g  pane-border-style               fg=colour238,bg=default
-set -g  pane-active-border-style        fg=colour51,bg=default
+set -g  pane-border-style               fg=colour245,bg=default
+set -g  pane-active-border-style        fg=colour39,bg=default
 
 set -g  message-style                   fg=red,bold,bg=default
 set -gw mode-style                      fg=colour0,bg=colour6
 
-set -g  status-left                     '#[fg=colour12,bg=colour234][#S] #[fg=colour234,bg=colour12]'
+set -g  status-left-length              32
+set -g  status-right-length             150
+
+set -g  status-fg                       white
+set -g  status-bg                       colour234
+set -g  status-left                     '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]'
 set -g  status-right                    '#[fg=colour241,bg=colour233]#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour245,bg=colour241]#[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g  status-interval                 1
 
-set -gw window-status-style             fg=colour138,bg=colour235
-set -gw window-status-format            ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-set -gw window-status-current-style     fg=colour81,bold,bg=colour12,bold
-set -gw window-status-current-format    ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-bind -T copy-mode-vi M-Up              send-keys -X scroll-up
-bind -T copy-mode-vi M-Down            send-keys -X scroll-down
-bind -T copy-mode-vi M-PageUp          send-keys -X halfpage-up
-bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
-bind -T copy-mode-vi PageDown          send-keys -X page-down
-bind -T copy-mode-vi PageUp            send-keys -X page-up
-
-bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
-bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
-
-
-unbind -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi MouseDown1Pane select-pane \;\
-  send-keys -X copy-pipe "pbcopy" \;\
-  send-keys -X clear-selection
+#set -g  window-status-activity-attr     bold
+set -g  window-status-format            "#[fg=white,bg=colour234] #I #W "
+set -g  window-status-current-format    "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour234,nobold]"
