--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ set -g prefix ^A
 set -g prefix2 ^B
 bind a send-prefix
 
+bind N new
 bind A command-prompt "rename-window %%"  # A = Rename window
 bind ^A last-window                       # ^A = Last window
 bind '\' confirm-before "kill-server"     # \ = Quit all 
@@ -88,3 +89,4 @@ set -g  status-interval                 1
 #set -g  window-status-activity-attr     bold
 set -g  window-status-format            "#[fg=white,bg=colour234] #I #W "
 set -g  window-status-current-format    "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour234,nobold]"
+setw -g aggressive-resize on
