--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,8 @@
 # k       = window
 # x       = pane
 set -g prefix ^A
-set -g prefix2 ^B
+#set -g prefix2 ^B
+unbind C-b
 bind a send-prefix
 
 bind N new
@@ -34,6 +35,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 bind P paste-buffer
+
+
+bind -n S-Left switch-client -p
+bind -n S-Right switch-client -n
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
